# fuse

./: .gitignore  CLAUDE.md  README.md  noxfile.py  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  release.yml
docs/: cli-reference.md  concepts.md  development.md  get-started.md  index.md  supported-models.md
docs/configuration/: extraction.md  inference.md  training.md
docs/stylesheets/: extra.css
examples/: extract_company.yaml  extract_description.yaml  extract_person.yaml  extract_with_schema.yaml  train_extraction.yaml  train_from_hub.yaml  train_general_sft.yaml
examples/data/: extraction_dataset.jsonl  instruction_dataset.jsonl  person_schema.json
src/fuse/: __init__.py  config.py
src/fuse/cli/: app.py
src/fuse/extraction/: __init__.py  extractor.py  prompts.py  schema.py  spans.py  visualize.py
src/fuse/inference/: __init__.py  _rust.py  backend.py  llama_cpp.py  model_resolver.py
src/fuse/training/: __init__.py  dataset.py  export.py  trainer.py
tests/: test_config.py  test_extraction.py  test_inference.py  test_model_resolver.py  test_spans.py
tests/integration/: conftest.py  test_inference_integration.py  test_training_integration.py
